# machine-learning

./: .gitignore
01-regression-classification/assignments/: C1_W3_Logistic_Regression.ipynb
01-regression-classification/labs/: C1_W1_Lab02_Model_Representation_Soln.ipynb  C1_W2_Lab05_Sklearn_GD_Soln.ipynb  C1_W3_Lab02_Sigmoid_function_Soln.ipynb  C1_W3_Lab05_Cost_Function_Soln.ipynb  C1_W3_Lab06_Gradient_Descent_Soln.ipynb  C1_W3_Lab09_Regularization_Soln.ipynb
02-advanced-learning-algorithms/assignments/: C2_W1_Assignment.ipynb  C2_W1_Lab02_CoffeeRoasting_TF.ipynb  C2_W2_Assignment.ipynb  C2_W3_Assignment.ipynb  C2_W4_Decision_Tree_with_Markdown.ipynb
02-advanced-learning-algorithms/labs/: C2W3_Lab_01_Model_Evaluation_and_Selection.ipynb  C2_W1_Lab01_Neurons_and_Layers.ipynb  C2_W2_Backprop.ipynb  C2_W2_Derivatives.ipynb  C2_W2_Multiclass_TF.ipynb  C2_W2_Relu.ipynb  C2_W2_SoftMax.ipynb  C2_W4_Lab_01_Decision_Trees.ipynb  C2_W4_Lab_02_Tree_Ensemble.ipynb
04-kaggle-competitions/01-spaceship-titanic/: 02-solution.ipynb  (+5 more)
04-kaggle/02-disaster-tweets/: kerasnlp-starter-notebook-disaster-tweets.ipynb  main.py  pyproject.toml  submission.csv
06-sequence/: Operations_on_word_vectors_v2a.ipynb
assignments/: C1_W2_Linear_Regression_ASSIGNMENT.ipynb
labs/: C1_W1_Lab03_Cost_function_Soln.ipynb  C1_W1_Lab04_Gradient_Descent_Soln.ipynb  C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb  C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb  C1_W3_Lab01_Classification_Soln.ipynb  C1_W3_Lab03_Decision_Boundary_Soln.ipynb  C1_W3_Lab04_LogisticLoss_Soln.ipynb
(+33 files in other folders)
