[project]
name = "02-disaster-tweets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "keras>=3.0.0",
    "keras-nlp>=0.23.0",
    "matplotlib>=3.10.7",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.1",
]
